--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -7,8 +7,8 @@ dir.store.music="/home/systore/music"
 dir.store.resources="/home/systore/resources"
 ;项目缓存文件路径,以/开头且不以/结尾
 dir.store.cache="/tmp/sycache"
-[deva01 : base]
+[deva1 : base]
 ;项目日志文件路径,以/开头且不以/结尾
-dir.store.log="/home/logs/seaslog/sya01"
+dir.store.log="/home/logs/seaslog/sya1"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
