php.ini depart to php-cli.ini and php-fpm-fcgi.ini;swoole ide helper update to 1.10.1

--- a/yaconf/cors.ini
+++ b/yaconf/cors.ini
@@ -17,4 +17,4 @@ allow.methods.5="X_Requested_With"
 ;附带凭证信息,作用于跨站请求
 allow.credentials="true"
 options.maxage=86400
-[deva1 : base]
+[devz01 : base]
