--- a/yaconf/oss.ini
+++ b/yaconf/oss.ini
@@ -1,4 +1,4 @@
-[deva1]
+[devz01]
 server.address.inner="http://oss-cn-shenzhen-internal.aliyuncs.com"
 server.address.outer="http://oss-cn-shenzhen.aliyuncs.com"
 access.key.id="1111"
