--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -12,17 +12,8 @@ swoole.group="root"
 ;服务所在IP，多服务部署的时候，不允许设置成localhost或127.0.0.1,必须设置成服务器实际的IP
 server.host="127.0.0.1"
 server.auth="6YjbN15oLmPKleN5"
-[deva1api : base]
+[devz01api : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
 ;api接口签名缓存数量
 server.cachenum.sign=1024
-[deva1order : base]
-;用户信息缓存数量,必须是2的指数倍
-server.cachenum.users=128
-[deva1user : base]
-;用户信息缓存数量,必须是2的指数倍
-server.cachenum.users=128
-[deva1services : base]
-;用户信息缓存数量,必须是2的指数倍
-server.cachenum.users=128
