nginx conf delete timeout form proxy_next_upstream

--- a/install/nginx/nginx.conf
+++ b/install/nginx/nginx.conf
@@ -276,7 +276,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Real-Port $remote_port;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream error invalid_header http_500 http_502 http_503 http_504;
 
             add_header Via "nginx";
         }
