nginx add lualib and sywaf

--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user  root;
+user root;
 #CPU个数的两倍
 worker_processes 4;
 
@@ -27,19 +27,48 @@ worker_rlimit_nofile 20480;
 #        http://www.zhuxiaodong.net/2016/configure-nginx-server-support-https-http2-on-centos7/
 #优化参考 https://www.cnblogs.com/suihui/p/3799683.html
 
+# 内置变量
+# $args 与请求行中的参数相等
+# $arg_PARAMETER PARAMETER为具体的参数名,$arg_PARAMETER就表示获取具体的参数值
+# $binary_remote_addr 二进制码形式的客户端地址
+# $body_bytes_sent 传送页面的字节数
+# $cookie_xxx COOKIE中字段xxx的值
+# $content_length 请求头中的Content-Length字段
+# $content_type 请求头中的Content-Type字段
+# $document_root 当前请求在root指令中指定的值
+# $document_uri 与$uri相同
+# $host 请求中的主机头字段,如果请求中的主机头不可用,则为服务器处理请求的服务器名称
+# $http_referer 用来记录从那个页面链接访问过来的
+# $http_user_agent 记录客户浏览器的相关信息
+# $http_x_forwarded_for 客户端ip地址
+# $is_args 如果$args设置,值为"?",否则为""
+# $limit_rate 限制的连接速率
+# $nginx_version 当前运行的nginx版本号
+# $query_string 与$args相同
+# $remote_addr 客户端IP地址
+# $remote_port 客户端端口
+# $remote_user 已经经过Auth Basic Module验证的用户名
+# $request 用来记录请求的url与http协议
+# $request_method 这个变量是客户端请求的动作,通常为GET或POST包括0.8.20及之前的版本中,这个变量总为main request中的动作,如果当前请求是一个子请求,并不使用这个当前请求的动作
+# $request_uri 这个变量等于包含一些客户端请求参数的原始URI,它无法修改,请查看$uri更改或重写URI
+# $request_filename 当前连接请求的文件路径,由root或alias指令与URI请求生成
+# $request_body 这个变量（0.7.58+）包含请求的主要信息在使用proxy_pass或fastcgi_pass指令的location中比较有意义
+# $request_body_file 客户端请求主体信息的临时文件名
+# $request_completion 未知
+# $scheme 所用的协议,比如http或者是https,比如rewrite ^(.+)$ $scheme://example.com$1 redirect;
+# $status 用来记录请求状态 成功是200
+# $server_protocol 请求使用的协议,通常是HTTP/1.0或HTTP/1.1
+# $server_addr 服务器地址,在完成一次系统调用后可以确定这个值,如果要绕开系统调用,则必须在listen中指定地址并且使用bind参数
+# $server_name 服务器名称
+# $server_port 请求到达服务器的端口号
+# $time_local 用来记录访问时间与时区
+# $uri 请求中的当前URI(不带请求参数,参数位于$args),可以不同于浏览器传递的$request_uri的值,它可以通过内部重定向,或者使用index指令进行修改
+
 http {
     include mime.types;
     default_type application/octet-stream;
     charset utf-8;
 
-    #$remote_addr与$http_x_forwarded_for用以记录客户端的ip地址
-    #$remote_user:用来记录客户端用户名称
-    #$time_local:用来记录访问时间与时区
-    #$request:用来记录请求的url与http协议
-    #$status:用来记录请求状态；成功是200
-    #$body_bytes_sent:记录发送给客户端文件主体内容大小
-    #$http_referer:用来记录从那个页面链接访问过来的
-    #$http_user_agent:记录客户浏览器的相关信息
     log_format main '$time_local $remote_addr $status $request_time $upstream_response_time - "$request" $body_bytes_sent "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
     log_format ssl '$time_local $remote_addr $status $request_time $upstream_response_time - "$request" $body_bytes_sent "$http_referer" "$http_x_forwarded_for" "$http_user_agent" $ssl_protocol $ssl_cipher $ssl_session_id $ssl_session_reused';
 
@@ -56,7 +85,7 @@ http {
     keepalive_disable msie6;
 
     #客户端请求头部的缓冲区大小,这个可以根据你的系统分页大小来设置,分页大小可以用命令getconf PAGESIZE
-    #也有client_header_buffer_size超过4k的情况,client_header_buffer_size该值必须设置为“系统分页大小”的整倍数
+    #也有client_header_buffer_size超过4k的情况,client_header_buffer_size该值必须设置为"系统分页大小"的整倍数
     client_header_buffer_size 4k;
     large_client_header_buffers 4 4k;
     #缓冲区代理缓冲用户端请求的最大字节数
@@ -80,15 +109,15 @@ http {
     gzip_disable "MSIE [1-6].";
     #设置允许压缩的页面最小字节数
     gzip_min_length 1k;
-    #设置系统获取几个单位的缓存用于存储gzip的压缩结果数据流。 例如 4 4k 代表以4k为单位,按照原始数据大小以4k为单位的4倍申请内存
+    #设置系统获取几个单位的缓存用于存储gzip的压缩结果数据流 例如 4 4k 代表以4k为单位,按照原始数据大小以4k为单位的4倍申请内存
     gzip_buffers 4 16k;
     gzip_http_version 1.1;
-    #gzip压缩比/压缩级别,压缩级别 1-9,级别越高压缩率越大,当然压缩时间也就越长,默认值：1，保持默认即可,级别越高服务器压力越大,默认通常是够用的
+    #gzip压缩比/压缩级别,压缩级别 1-9,级别越高压缩率越大,当然压缩时间也就越长,默认值：1,保持默认即可,级别越高服务器压力越大,默认通常是够用的
     gzip_comp_level 1;
     #gzip压缩的文件mime类型
     gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
     #Nginx作为反向代理的时候启用,决定后端服务器返回的结果是否压缩
-    #匹配的前提是后端服务器必须要返回包含”Via”的 header头
+    #匹配的前提是后端服务器必须要返回包含"Via"的 header头
     gzip_proxied any;
     #根据客户端的HTTP头来判断,是否需要压缩
     gzip_vary on;
@@ -96,13 +125,17 @@ http {
     #关闭nginx版本信息
     server_tokens off;
 
-    #防火墙配置
+    #lua配置
+    lua_code_cache on;
+    lua_package_path "/home/configs/nginx/lualib/?.lua";
+    lua_package_cpath "/home/configs/nginx/lualib/?.so";
     lua_need_request_body on;
-    lua_package_path "/home/configs/nginx/waf/?.lua";
     #开启防御CC攻击必须设置
-    lua_shared_dict limit 20m;
-    init_by_lua_file /home/configs/nginx/waf/init.lua;
-    access_by_lua_file /home/configs/nginx/waf/waf.lua;
+    lua_shared_dict sywafcachecc 10m;
+    init_by_lua_file /home/configs/nginx/lualib/init.lua;
+    limit_req_zone $cookie_sywaftoken zone=sywaftokens:10m rate=10r/s;
+    #防火墙配置
+    access_by_lua 'symodules.waf.checkWaf()';
 
     #定义一个limit_req_zone用来存储session
     #名为allips,以$binary_remote_addr为key,10M内存大小,限制平均每秒的请求为20个
@@ -292,29 +325,6 @@ http {
             deny all;
         }
     }
-
-    #$args此变量与请求行中的参数相等
-    #$content_length等于请求行的“Content_Length”的值。
-    #$content_type等同与请求头部的”Content_Type”的值
-    #$document_root等同于当前请求的root指令指定的值
-    #$document_uri与$uri一样
-    #$host与请求头部中“Host”行指定的值或是request到达的server的名字（没有Host行）一样
-    #$limit_rate允许限制的连接速率
-    #$request_method等同于request的method,通常是“GET”或“POST”
-    #$remote_addr客户端ip
-    #$remote_port客户端port
-    #$remote_user等同于用户名,由ngx_http_auth_basic_module认证
-    #$request_filename当前请求的文件的路径名,由root或alias和URI request组合而成
-    #$request_body_file
-    #$request_uri含有参数的完整的初始URI
-    #$query_string与$args一样
-    #$sheeme http模式（http,https）尽在要求是评估例如
-    #Rewrite ^(.+)$ $sheme://example.com$; Redirect;
-    #$server_protocol等同于request的协议,使用“HTTP/或“HTTP/
-    #$server_addr request到达的server的ip,一般获得此变量的值的目的是进行系统调用。为了避免系统调用,有必要在listen指令中指明ip,并使用bind参数。
-    #$server_name请求到达的服务器名
-    #$server_port请求到达的服务器的端口号
-    #$uri等同于当前request中的URI,可不同于初始值,例如内部重定向时或使用index
 }
 
 #stream配置
