--- a/install/configs/swooleyaf/nginx/nginx.conf
+++ b/install/configs/swooleyaf/nginx/nginx.conf
@@ -48,11 +48,15 @@ http {
 
     server_tokens off;
 
+    lua_code_cache on;
     lua_need_request_body on;
-    lua_package_path "/home/configs/nginx/waf/?.lua";
-    lua_shared_dict limit 20m;
-    init_by_lua_file /home/configs/nginx/waf/init.lua;
-    access_by_lua_file /home/configs/nginx/waf/waf.lua;
+    lua_package_path "/home/configs/nginx/lualib/?.lua";
+    lua_package_cpath "/home/configs/nginx/lualib/?.so";
+    lua_need_request_body on;
+    lua_shared_dict sywafcachecc 10m;
+    init_by_lua_file /home/configs/nginx/lualib/init.lua;
+    limit_req_zone $cookie_sywaftoken zone=sywaftokens:20m rate=3r/s;
+    access_by_lua 'symodules.waf.checkWaf()';
 
     include /home/configs/nginx/servers/*.conf;
 }
