sy server update to 3.6,use nginx for route balance

--- a/install/configs/swooleyaf/nginx/demoapi.conf
+++ b/install/configs/swooleyaf/nginx/demoapi.conf
@@ -7,8 +7,8 @@ map $limited $allips {
     1 $binary_remote_addr;
     0 "";
 }
-upstream backend {
-    zone backend 64k;
+upstream serversyapi {
+    zone serversyapi 64k;
     least_conn;
     server 10.81.125.222:7100 weight=1 max_fails=3 fail_timeout=30;
     keepalive 500;
@@ -28,7 +28,7 @@ server {
     add_header Cache-Control 'no-store';
     location / {
         limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://backend;
+        proxy_pass http://serversyapi;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
@@ -83,7 +83,7 @@ server {
 
     location / {
         limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://backend;
+        proxy_pass http://serversyapi;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
