--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -11,3 +11,16 @@ dir.store.cache="/tmp/sycache"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
 wx.appid.default="1111"
+;服务模块
+modules.api.host="api.xxx.cn"
+modules.api.port=80
+modules.api.type="api"
+modules.order.host="127.0.0.1"
+modules.order.port=9600
+modules.order.type="rpc"
+modules.user.host="127.0.0.1"
+modules.user.port=9601
+modules.user.type="rpc"
+modules.services.host="127.0.0.1"
+modules.services.port=9602
+modules.services.type="rpc"
