sy server update to 3.6,use nginx for route balance

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -10,3 +10,7 @@ dir.store.cache="/tmp/sycache"
 [devz01 : base]
 ;cookie域名
 domain.cookie.base=".xxx.cn"
+;服务模块
+modules.api.host="api.xxx.cn"
+modules.api.port=80
+modules.api.type="api"
