sy server update to 3.6,use nginx for route balance

--- a/install/configs/swooleyaf/nginx/nginx.conf
+++ b/install/configs/swooleyaf/nginx/nginx.conf
@@ -61,5 +61,7 @@ http {
 }
 
 stream {
+    log_format rpc '[$time_local] $remote_addr $status $bytes_sent $bytes_received $protocol $session_time';
+
     include /home/configs/nginx/streams/*.conf;
 }
