--- a/install/configs/swooleyaf/nginx/a01order.conf
+++ b/install/configs/swooleyaf/nginx/a01order.conf
@@ -6,6 +6,7 @@ upstream a01order {
 
 server {
     listen 127.0.0.1:9600 so_keepalive=60s::;
+    access_log /home/logs/nginx/a01order.access.log rpc;
     tcp_nodelay on;
     proxy_connect_timeout 1s;
     proxy_timeout 30s;
