--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -12,6 +12,12 @@ swoole.group="root"
 ;服务所在IP，多服务部署的时候，不允许设置成localhost或127.0.0.1,必须设置成服务器实际的IP
 server.host="127.0.0.1"
 server.auth="6YjbN15oLmPKleN5"
+;健康检查列表缓存数量,必须是2的指数倍,用于监控业务请求是否超过允许的最大执行时间
+server.cachenum.hc=1024
+;服务模块缓存数量,必须是2的指数倍,每一个模块就需要缓存一份数据
+server.cachenum.modules=16
+;项目本地缓存数量,必须是2的指数倍,目前只有微信用到,一个微信公众号需要两个缓存分别存access_token和js_ticket
+server.cachenum.local=64
 [deva01api : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
