--- a/install/resources/mysql/navicat.desktop
+++ b/install/resources/mysql/navicat.desktop
@@ -4,7 +4,7 @@ Name=Navicat Premium
 Comment=The Smarter Way to manage dadabase
 Exec=/bin/sh "/home/jw/softwares/navicat/start_navicat"
 Icon=/home/jw/softwares/navicat/navicat.png
-Categories=Application;Database;MySQL;navicat
+Categories=Application;Development;Database;MySQL;navicat
 Version=1.0
 Type=Application
 Terminal=0
