nginx add wx auth file match

--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -3,8 +3,11 @@ server {
     server_name front.xxx.cn;
     root /home/jw/front;
     access_log /home/logs/nginx/xxxcn_front.access.log main;
-
     error_page 500 502 503 504 /50x.html;
+
+    if ( $uri ~ ^/MP_verify_([0-9a-zA-z]+)\.txt$ ) {
+        return 200 $1;
+    }
     location = /50x.html {
         root html;
     }
