--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -218,6 +218,11 @@ http {
             deny all;
         }
 
+        //微信校验文件匹配
+        if ( $uri ~ ^/MP_verify_([0-9a-zA-z]+)\.txt$ ) {
+            return 200 $1;
+        }
+
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
             root html;
