--- a/yaconf/wx.ini
+++ b/yaconf/wx.ini
@@ -12,7 +12,9 @@ shops.a001.pay.key="1111"
 shops.a001.pay.url.notify="http://api2.xxx.cn:7100"
 ;支付授权URL
 shops.a001.pay.url.auth="http://wp.xxx.cn"
+;商户证书内容，去除证书文件的第一行和最后一行以及所有换行
 shops.a001.ssl.cert="1111"
+;商户密钥内容，去除密钥文件的第一行和最后一行以及所有换行
 shops.a001.ssl.key="1111"
 shops.a001.templates.payorder="1111"
 open.expire.component.accesstoken=7000
