update wx cache

--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -18,6 +18,10 @@ server.cachenum.hc=1024
 server.cachenum.modules=16
 ;项目本地缓存数量,必须是2的指数倍,目前只有微信用到,一个微信公众号需要两个缓存分别存access_token和js_ticket
 server.cachenum.local=64
+;项目本地微信商户号token缓存数量,必须是2的指数倍,存access_token和js_ticket
+server.cachenum.wxshop.token=64
+;项目本地微信开放平台授权公众号token缓存数量,必须是2的指数倍,存access_token和js_ticket
+server.cachenum.wxopen.authorizertoken=64
 [deva01api : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
