log update msg format

--- a/install/configs/swooleyaf/php7/php-cli.ini
+++ b/install/configs/swooleyaf/php7/php-cli.ini
@@ -187,5 +187,6 @@ extension=seaslog.so
 seaslog.default_basepath=/home/logs/seaslog-cli/
 seaslog.use_buffer=0
 seaslog.default_logger=default
+seaslog.default_template = "%T | %t | %L | %H | %P | %M"
 [msgpack]
 extension=msgpack.so
