--- a/install/resources/php7/php-fpm-fcgi.ini
+++ b/install/resources/php7/php-fpm-fcgi.ini
@@ -1997,5 +1997,6 @@ extension=seaslog.so
 seaslog.default_basepath=/home/logs/seaslog-fpm/
 seaslog.use_buffer=0
 seaslog.default_logger=default
+seaslog.default_template = "%T | %t | %L | %H | %P | %M"
 [msgpack]
 extension=msgpack.so
