log update logger

--- a/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
+++ b/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
@@ -144,7 +144,7 @@ extension=ldap.so
 [mcrypt]
 [dba]
 [opcache]
-zend_extension=/usr/local/php7/lib/php/extensions/no-debug-non-zts-20160303/opcache.so
+zend_extension="/usr/local/php7/lib/php/extensions/no-debug-non-zts-20160303/opcache.so"
 opcache.enable=1
 opcache.enable_cli=0
 opcache.memory_consumption=128
@@ -153,7 +153,7 @@ opcache.max_accelerated_files=10000
 opcache.validate_timestamps=0
 opcache.revalidate_freq=0
 opcache.fast_shutdown=1
-opcache.file_cache=/tmp/swoolyaf
+opcache.file_cache="/tmp/swoolyaf"
 [curl]
 [openssl]
 [imagick]
@@ -166,7 +166,7 @@ yaf.environ=dev
 yaf.lowcase_path=0
 [yaconf]
 extension=yaconf.so
-yaconf.directory=/home/configs/yaconf-fpm
+yaconf.directory="/home/configs/yaconf-fpm"
 yaconf.check_delay=0
 [yac]
 extension=yac.so
@@ -184,9 +184,9 @@ extension=swoole.so
 swoole.fast_serialize=on
 [seaslog]
 extension=seaslog.so
-seaslog.default_basepath=/home/logs/seaslog-fpm/
+seaslog.default_basepath="/home/logs/seaslog-fpm/"
 seaslog.use_buffer=0
-seaslog.default_logger=default
+seaslog.default_logger=
 seaslog.default_template = "%T | %t | %L | %H | %P | %M"
 [msgpack]
 extension=msgpack.so
