--- a/install/resources/php7/php-fpm-fcgi.ini
+++ b/install/resources/php7/php-fpm-fcgi.ini
@@ -1782,7 +1782,7 @@ extension=ldap.so
 ;dba.default_handler=
 
 [opcache]
-zend_extension=/usr/local/php7/lib/php/extensions/no-debug-non-zts-20160303/opcache.so
+zend_extension="/usr/local/php7/lib/php/extensions/no-debug-non-zts-20160303/opcache.so"
 ; Determines if Zend OPCache is enabled
 opcache.enable=1
 
@@ -1896,7 +1896,7 @@ opcache.fast_shutdown=1
 ; It should improve performance when SHM memory is full, at server restart or
 ; SHM reset. The default "" disables file based caching.
 ; 为了方便清理缓存,统一配置到/tmp目录下
-opcache.file_cache=/tmp/swoolyaf
+opcache.file_cache="/tmp/swoolyaf"
 
 ; Enables or disables opcode caching in shared memory.
 ;opcache.file_cache_only=0
@@ -1956,7 +1956,7 @@ yaf.environ=dev
 yaf.lowcase_path=0
 [yaconf]
 extension=yaconf.so
-yaconf.directory=/home/configs/yaconf-fpm
+yaconf.directory="/home/configs/yaconf-fpm"
 yaconf.check_delay=0
 [yac]
 extension=yac.so
@@ -1994,9 +1994,9 @@ extension=swoole.so
 swoole.fast_serialize=on
 [seaslog]
 extension=seaslog.so
-seaslog.default_basepath=/home/logs/seaslog-fpm/
+seaslog.default_basepath="/home/logs/seaslog-fpm/"
 seaslog.use_buffer=0
-seaslog.default_logger=default
+seaslog.default_logger=
 seaslog.default_template = "%T | %t | %L | %H | %P | %M"
 [msgpack]
 extension=msgpack.so
