add inner ip constant

--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -11,6 +11,8 @@ swoole.user="root"
 swoole.group="root"
 ;服务所在IP，多服务部署的时候，不允许设置成localhost或127.0.0.1,必须设置成服务器实际的IP
 server.host="127.0.0.1"
+;当前服务器内网IP
+server.innerip="192.168.1.1"
 server.auth="6YjbN15oLmPKleN5"
 ;健康检查列表缓存数量,必须是2的指数倍,用于监控业务请求是否超过允许的最大执行时间
 server.cachenum.hc=1024
