log add server ip

--- a/install/resources/php7/php-cli.ini
+++ b/install/resources/php7/php-cli.ini
@@ -1997,6 +1997,6 @@ extension=seaslog.so
 seaslog.default_basepath="/home/logs/seaslog-cli/"
 seaslog.use_buffer=0
 seaslog.default_logger=
-seaslog.default_template = "%T | %t | %L | %H | %P | %M"
+seaslog.default_template = "%T | %t | %L | %P | %M"
 [msgpack]
 extension=msgpack.so
