--- a/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
+++ b/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
@@ -187,6 +187,6 @@ extension=seaslog.so
 seaslog.default_basepath="/home/logs/seaslog-fpm/"
 seaslog.use_buffer=0
 seaslog.default_logger=
-seaslog.default_template = "%T | %t | %L | %H | %P | %M"
+seaslog.default_template = "%T | %t | %L | %P | %M"
 [msgpack]
 extension=msgpack.so
