--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -11,6 +11,7 @@ dir.store.cache="/tmp/sycache"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
 wx.appid.default="1111"
+alipay.appid.default="1111"
 ;服务模块
 modules.api.host="api.xxx.cn"
 modules.api.port=80
