server add set bcscale

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -7,6 +7,8 @@ dir.store.music="/home/systore/music"
 dir.store.resources="/home/systore/resources"
 ;项目缓存文件路径,以/开头且不以/结尾
 dir.store.cache="/tmp/sycache"
+;bc数学函数小数点保留位数
+bcmath.scale=3
 [devz01 : base]
 ;cookie域名
 domain.cookie.base=".xxx.cn"
