http server add health check

--- a/install/configs/swooleyaf/nginx/demoapi.conf
+++ b/install/configs/swooleyaf/nginx/demoapi.conf
@@ -7,11 +7,14 @@ map $limited $allips {
     1 $binary_remote_addr;
     0 "";
 }
-upstream serversyapi {
-    zone serversyapi 64k;
+upstream http_a01api {
+    zone http_a01api 64k;
     least_conn;
     server 10.81.125.222:7100 weight=1 max_fails=3 fail_timeout=30;
     keepalive 500;
+    check interval=15000 fall=3 rise=2 timeout=1500 default_down=false type=http;
+    check_http_send "HEAD /healthcheck HTTP/1.0\r\n\r\n";
+    check_http_expect_alive http_2xx http_3xx;
 }
 server {
     listen 80;
@@ -28,7 +31,7 @@ server {
     add_header Cache-Control 'no-store';
     location / {
         limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://serversyapi;
+        proxy_pass http://http_a01api;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
@@ -83,7 +86,7 @@ server {
 
     location / {
         limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://serversyapi;
+        proxy_pass http://http_a01api;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
