--- a/install/configs/swooleyaf/nginx/a01order.conf
+++ b/install/configs/swooleyaf/nginx/a01order.conf
@@ -1,9 +1,8 @@
-upstream a01order {
-    zone a01order 64k;
+upstream rpc_a01order {
+    zone rpc_a01order 64k;
     least_conn;
     server 127.0.0.1:7120 weight=1 max_fails=3 fail_timeout=30s;
 }
-
 server {
     listen 127.0.0.1:9600 so_keepalive=60s::;
     tcp_nodelay on;
@@ -11,5 +10,5 @@ server {
     proxy_timeout 30s;
     proxy_buffer_size 32k;
     proxy_next_upstream on;
-    proxy_pass a01order;
+    proxy_pass rpc_a01order;
 }
