--- a/install/configs/swooleyaf/nginx/a01services.conf
+++ b/install/configs/swooleyaf/nginx/a01services.conf
@@ -1,9 +1,8 @@
-upstream a01services {
-    zone a01services 64k;
+upstream rpc_a01services {
+    zone rpc_a01services 64k;
     least_conn;
     server 127.0.0.1:7160 weight=1 max_fails=3 fail_timeout=30s;
 }
-
 server {
     listen 127.0.0.1:9602 so_keepalive=60s::;
     tcp_nodelay on;
@@ -11,5 +10,5 @@ server {
     proxy_timeout 30s;
     proxy_buffer_size 32k;
     proxy_next_upstream on;
-    proxy_pass a01services;
+    proxy_pass rpc_a01services;
 }
