--- a/install/configs/swooleyaf/nginx/a01user.conf
+++ b/install/configs/swooleyaf/nginx/a01user.conf
@@ -1,9 +1,8 @@
-upstream a01user {
-    zone a01user 64k;
+upstream rpc_a01user {
+    zone rpc_a01user 64k;
     least_conn;
     server 127.0.0.1:7140 weight=1 max_fails=3 fail_timeout=30s;
 }
-
 server {
     listen 127.0.0.1:9601 so_keepalive=60s::;
     tcp_nodelay on;
@@ -11,5 +10,5 @@ server {
     proxy_timeout 30s;
     proxy_buffer_size 32k;
     proxy_next_upstream on;
-    proxy_pass a01user;
+    proxy_pass rpc_a01user;
 }
