cookie waf support multi domain

--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -1,3 +1,4 @@
+limit_req_zone $cookie_sywafa01 zone=sywafa01:20m rate=3r/s;
 server {
     listen 80;
     server_name front.xxx.cn;
@@ -13,9 +14,9 @@ server {
         root html;
     }
     location / {
-        limit_req zone=sywaftokens burst=5 nodelay;
+        limit_req zone=sywafa01 burst=5 nodelay;
         index index.html index.htm index.php;
-        access_by_lua 'symodules.waf.checkCookieToken()';
+        access_by_lua 'symodules.waf.checkCookieToken("a01")';
     }
     location /ngx_status {
         stub_status on;
