update nginx lua cc deny

--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -1,4 +1,4 @@
-limit_req_zone $cookie_sywafa01 zone=sywafa01:20m rate=3r/s;
+lua_shared_dict sywafcca01 20m;
 server {
     listen 80;
     server_name front.xxx.cn;
@@ -14,9 +14,8 @@ server {
         root html;
     }
     location / {
-        limit_req zone=sywafa01 burst=5 nodelay;
         index index.html index.htm index.php;
-        access_by_lua 'symodules.waf.checkCookieToken("a01")';
+        access_by_lua 'symodules.waf.checkCCDeny("a01")';
     }
     location /ngx_status {
         stub_status on;
