fixed error for module task req

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -14,6 +14,6 @@ dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
 ;服务模块
-modules.api.host="api.xxx.cn"
-modules.api.port=80
+modules.api.host="127.0.01"
+modules.api.port=9600
 modules.api.type="api"
