--- a/install/configs/swooleyaf/redis/6379.conf
+++ b/install/configs/swooleyaf/redis/6379.conf
@@ -50,4 +50,5 @@ client-output-buffer-limit slave 256mb 64mb 60
 client-output-buffer-limit pubsub 32mb 8mb 60
 hz 10
 aof-rewrite-incremental-fsync yes
+maxmemory 2147483648
 maxmemory-policy allkeys-lru
