--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -15,7 +15,7 @@ server {
     }
     location / {
         index index.html index.htm index.php;
-        access_by_lua 'symodules.waf.checkCCDeny("a01")';
+        access_by_lua 'symodules.waf.checkCCDeny("a01", "jb6hNP")';
     }
     location /ngx_status {
         stub_status on;
