--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -27,12 +27,20 @@ server.cachenum.wxopen.authorizertoken=64
 server.cachenum.users=128
 ;api接口签名缓存数量
 server.cachenum.sign=1024
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=3000
 [deva01order : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=1000
 [deva01user : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=1000
 [deva01services : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=1000
