--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -27,3 +27,5 @@ server.cachenum.wxopen.authorizertoken=64
 server.cachenum.users=128
 ;api接口签名缓存数量
 server.cachenum.sign=1024
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=3000
