--- a/install/configs/swooleyaf/mysql/my.cnf
+++ b/install/configs/swooleyaf/mysql/my.cnf
@@ -30,6 +30,7 @@ sync_binlog = 1
 expire_logs_days = 30
 binlog-format = ROW
 skip-name-resolve
+bind_address = 0.0.0.0
 character-set-server = utf8mb4
 collation-server = utf8mb4_general_ci
 sql-mode = STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_AUTO_VALUE_ON_ZERO,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE
