nginx add cache config

--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -125,6 +125,9 @@ http {
     #关闭nginx版本信息
     server_tokens off;
 
+    #缓存目录,不能设置在/tmp目录下
+    proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=3d max_size=64m;
+
     #lua配置
     lua_code_cache on;
     lua_package_path "/home/configs/nginx/lualib/?.lua";
@@ -321,10 +324,31 @@ http {
         #动静分离,静态文件配置
         location ~ .*\.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
             root /home/jw/phpspace/swooleyaf/static;
-            expires 10m;
+            proxy_buffering on;
+            #设置nginx保存用户头信息的缓冲区大小
+            proxy_buffer_size 4k;
+            #缓冲区大小
+            proxy_buffers 4 64k;
+            #高负荷下缓冲大小(proxy_buffers*2)
+            proxy_busy_buffers_size 128k;
+            #缓冲文件目录,不能设置在/tmp目录下
+            proxy_temp_path /home/configs/nginx/temp/a01;
+            #一次访问能写入的临时文件的大小
+            proxy_temp_file_write_size 128k;
+            #响应内容大于proxy_buffers指定的缓冲区时,写入硬盘的临时文件的大小
+            #如果超过了这个值,Nginx将与Proxy服务器同步的传递内容而不再缓冲到硬盘
+            #设置为0时,则直接关闭硬盘缓冲
+            proxy_max_temp_file_size 4m;
+            proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+            proxy_cache ngcachea01;
+            proxy_cache_key '$host:$server_port$request_uri';
+            proxy_cache_valid 200 304 302 15m;
+            proxy_cache_valid any 5m;
+            add_header X-Cache '$upstream_cache_status from $host';
             add_header Cache-Control public;
             add_header Pragma public;
             add_header Vary Accept-Encoding;
+            expires 10m;
         }
         location ~ /\.ht {
             deny all;
