--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -1,4 +1,5 @@
 lua_shared_dict sywafcca01 20m;
+proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=3d max_size=64m;
 server {
     listen 80;
     server_name front.xxx.cn;
@@ -35,10 +36,23 @@ server {
         include fastcgi_params;
     }
     location ~ .*\.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
-        expires 30m;
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 4 64k;
+        proxy_busy_buffers_size 128k;
+        proxy_temp_path /home/configs/nginx/temp/a01;
+        proxy_temp_file_write_size 128k;
+        proxy_max_temp_file_size 4m;
+        proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+        proxy_cache ngcachea01;
+        proxy_cache_key '$host:$server_port$request_uri';
+        proxy_cache_valid 200 304 302 15m;
+        proxy_cache_valid any 5m;
+        add_header X-Cache '$upstream_cache_status from $host';
         add_header Cache-Control public;
         add_header Pragma public;
         add_header Vary Accept-Encoding;
+        expires 30m;
     }
     location ~ /\.ht {
         deny all;
