nginx update cache config

--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -125,8 +125,18 @@ http {
     #关闭nginx版本信息
     server_tokens off;
 
+    proxy_buffering on;
+    #一次访问能写入的临时文件的大小
+    proxy_temp_file_write_size 128k;
+    #响应内容大于proxy_buffers指定的缓冲区时,写入硬盘的临时文件的大小
+    #如果超过了这个值,Nginx将与Proxy服务器同步的传递内容而不再缓冲到硬盘
+    #设置为0时,则直接关闭硬盘缓冲
+    proxy_max_temp_file_size 4m;
+    proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
     #缓存目录,不能设置在/tmp目录下
     proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=3d max_size=64m;
+    #缓冲文件目录,不能设置在/tmp目录下
+    proxy_temp_path /home/configs/nginx/temp/a01 1 2;
 
     #lua配置
     lua_code_cache on;
@@ -321,34 +331,38 @@ http {
 
             add_header Via "nginx";
         }
+        #手动清理缓存
+        location ~ /purge(/.*) {
+            allow 127.0.0.1;
+            allow 113.110.210.0/24;
+            deny all;
+            proxy_cache_purge ngcachea01 $host$1;
+        }
         #动静分离,静态文件配置
-        location ~ .*\.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
+        location ~ \.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
             root /home/jw/phpspace/swooleyaf/static;
-            proxy_buffering on;
             #设置nginx保存用户头信息的缓冲区大小
             proxy_buffer_size 4k;
             #缓冲区大小
             proxy_buffers 4 64k;
             #高负荷下缓冲大小(proxy_buffers*2)
             proxy_busy_buffers_size 128k;
-            #缓冲文件目录,不能设置在/tmp目录下
-            proxy_temp_path /home/configs/nginx/temp/a01;
-            #一次访问能写入的临时文件的大小
-            proxy_temp_file_write_size 128k;
-            #响应内容大于proxy_buffers指定的缓冲区时,写入硬盘的临时文件的大小
-            #如果超过了这个值,Nginx将与Proxy服务器同步的传递内容而不再缓冲到硬盘
-            #设置为0时,则直接关闭硬盘缓冲
-            proxy_max_temp_file_size 4m;
-            proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
             proxy_cache ngcachea01;
-            proxy_cache_key '$host:$server_port$request_uri';
+            proxy_cache_key $host$uri;
             proxy_cache_valid 200 304 302 15m;
             proxy_cache_valid any 5m;
-            add_header X-Cache '$upstream_cache_status from $host';
-            add_header Cache-Control public;
+            #当缓存过期后且开启了proxy_cache_revalidate,则会发出一次if-modified-since或if-none-match条件请求,如果后端返回304,则此时$upstream_cache_status为REVALIDATED,节省带宽和减少写磁盘的次数
+            proxy_cache_revalidate on;
+            #用于控制请求多少次后响应才被缓存
+            proxy_cache_min_uses 3;
+            #当多个客户端同时请求同一份内容时且开启proxy_cache_lock（默认off）,则只有一个请求被发送至后端,其他请求将等待第一个请求返回后,从缓存中获取内容返回
+            proxy_cache_lock on;
+            proxy_cache_lock_timeout 3s;
+            #控制什么情况不使用缓存的内容,而是直接到后端获取最新的内容
+            proxy_cache_bypass $http_pragma;
+            add_header X-Cache $upstream_cache_status;
+            add_header Cache-Control public,max-age=300;
             add_header Pragma public;
-            add_header Vary Accept-Encoding;
-            expires 10m;
         }
         location ~ /\.ht {
             deny all;
