--- a/install/configs/swooleyaf/nginx/demofront.conf
+++ b/install/configs/swooleyaf/nginx/demofront.conf
@@ -1,6 +1,12 @@
 lua_shared_dict sywafcca01 20m;
-proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=3d max_size=64m;
-proxy_temp_path /home/configs/nginx/temp/a01 1 2;
+proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=1d max_size=64m;
+proxy_temp_path /home/configs/nginx/temp/a01;
+upstream http_staticfront {
+    zone http_staticfront 64k;
+    least_conn;
+    server 10.81.125.222:9680 weight=1 max_fails=3 fail_timeout=30;
+    keepalive 500;
+}
 server {
     listen 80;
     server_name front.xxx.cn;
@@ -43,21 +49,36 @@ server {
         proxy_cache_purge ngcachea01 $host$1;
     }
     location ~ \.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
-        proxy_buffer_size 4k;
+        proxy_pass http://http_staticapidoc;
+        proxy_redirect off;
+        proxy_ignore_client_abort on;
+        proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+        proxy_http_version 1.1;
+        proxy_connect_timeout 10;
+        proxy_read_timeout 30;
+        proxy_send_timeout 20;
         proxy_buffers 4 64k;
+        proxy_buffer_size 4k;
         proxy_busy_buffers_size 128k;
+        proxy_temp_file_write_size 128k;
+        proxy_max_temp_file_size 16m;
+        proxy_set_header Host $host;
+        proxy_set_header Connection "";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-Port $remote_port;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         proxy_cache ngcachea01;
         proxy_cache_key $host$uri;
         proxy_cache_valid 200 304 302 15m;
         proxy_cache_valid any 5m;
         proxy_cache_revalidate on;
-        proxy_cache_min_uses 3;
+        proxy_cache_min_uses 1;
         proxy_cache_lock on;
         proxy_cache_lock_timeout 3s;
         proxy_cache_bypass $http_pragma;
         add_header X-Cache $upstream_cache_status;
-        add_header Cache-Control public,max-age=300;
-        add_header Pragma public;
+        add_header Via "nginx";
     }
     location ~ /\.ht {
         deny all;
