nginx add cache config

--- a/install/configs/swooleyaf/nginx/nginx.conf
+++ b/install/configs/swooleyaf/nginx/nginx.conf
@@ -49,6 +49,7 @@ http {
     server_tokens off;
 
     proxy_buffering on;
+    proxy_temp_path /home/configs/nginx/temp 1 2;
 
     lua_code_cache on;
     lua_need_request_body on;
