add sy cache constant for wxshop and wxopen

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -14,6 +14,8 @@ dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
 wx.appid.default="1111"
+wx.url.auth.default="http://www.baidu.com"
+wx.url.notify.default="http://www.baidu.com"
 alipay.appid.default="1111"
 ;服务模块
 modules.api.host="127.0.0.1"
