add sy cache constant for wxshop and wxopen

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -13,6 +13,8 @@ bcmath.scale=3
 dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
+wx.url.auth.default="http://www.baidu.com"
+wx.url.notify.default="http://www.baidu.com"
 ;服务模块
 modules.api.host="127.0.01"
 modules.api.port=9600
