--- a/yaconf/wx.ini
+++ b/yaconf/wx.ini
@@ -10,6 +10,12 @@ open.token="1111"
 open.aeskey.before="1111"
 open.aeskey.now="1111"
 ;授权页面域名
-open.authurl.domain="http://api2.xxx.cn"
+open.url.auth="http://api2.xxx.cn"
 ;授权页面回跳地址
-open.authurl.callback="http://api2.xxx.cn"
+open.url.authcallback="http://api2.xxx.cn"
+;小程序服务域名
+open.domain.mini.server[]="api2.xxx.cn"
+open.domain.mini.server.1="api2.xxx.cn"
+;小程序业务域名
+open.domain.mini.webview[]="api2.xxx.cn"
+open.domain.mini.webview.1="api2.xxx.cn"
