--- a/yaconf/wx.ini
+++ b/yaconf/wx.ini
@@ -13,6 +13,8 @@ open.aeskey.now="1111"
 open.url.auth="http://api2.xxx.cn"
 ;授权页面回跳地址
 open.url.authcallback="http://api2.xxx.cn"
+;换绑小程序管理员回跳地址
+open.url.mini.rebindadmin="http://api2.xxx.cn"
 ;小程序服务域名
 open.domain.mini.server[]="api2.xxx.cn"
 open.domain.mini.server.1="api2.xxx.cn"
