--- a/yaconf/im.ini
+++ b/yaconf/im.ini
@@ -2,3 +2,5 @@
 tencent.app.id="1111"
 tencent.private.key="1111"
 tencent.command.sign="1111"
+tencent.account.admin="1111"
+tencent.account.type="1111"
