nginx rewrite add wxopen authority route

--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -290,7 +290,7 @@ http {
         #路由重写,以下例子将路由 /search/abcde重写到/Index/Image/index?callback=dfasx&keyword=abcde,其中abcde为/search/后面的字符串
         rewrite ^/search\/([^\/]+?)(\/|$) /Index/Image/index?callback=dfasx&keyword=$1 permanent;
         #开放平台授权公众号消息路由重写
-        rewrite ^/Index/WxOpen/handleAuthorizerNotify/([0-9a-zA-Z]+)$ /Index/WxOpen/handleAuthorizerNotify?appid=$1&openid=$arg_openid&nonce=$arg_nonce&msg_signature=$arg_msg_signature&encrypt_type=$arg_encrypt_type&timestamp=$arg_timestamp permanent;
+        rewrite ^/Index/WxOpen/handleAuthorizerNotify/([0-9a-zA-Z]+)$ /Index/WxOpen/handleAuthorizerNotify?appid=$1 permanent;
 
         location / {
             #brust-漏桶数
