kafka mq update to version 2.0

--- a/yaconf/kafka.ini
+++ b/yaconf/kafka.ini
@@ -1,9 +1,10 @@
-[devz01]
-brokers[]="web1.xxx.com:9092"
-brokers.1="web2.xxx.com:9092"
-brokers.2="web3.xxx.com:9092"
+[producer]
+request.required.acks=1
+request.timeout.ms=3000
+[consumer]
+enable.auto.commit=1
+auto.offset.reset="smallest"
+[deva01producer : producer]
+[deva01consumer : consumer]
 group.id="mygroup"
-#Set where to start consuming messages when there is no initial offset in
-#offset store or the desired offset is out of range.
-#  'smallest': start from the beginning
-offset.reset="smallest"
+metadata.broker.list="web1.xxx.com:9092,web2.xxx.com:9092,web3.xxx.com:9092"
