--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -30,3 +30,7 @@ modules.user.type="rpc"
 modules.services.host="127.0.0.1"
 modules.services.port=9603
 modules.services.type="rpc"
+;请求签名方法
+request.sign.method="md5"
+;请求签名密钥
+request.sign.secret="r2n2uyactaw9tiniyk"
