update request sign

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -19,3 +19,7 @@ wx.url.notify.default="http://www.baidu.com"
 modules.api.host="127.0.01"
 modules.api.port=9600
 modules.api.type="api"
+;请求签名方法
+request.sign.method="md5"
+;请求签名密钥
+request.sign.secret="r2n2uyactaw9tiniyk"
