update nginx config

--- a/install/resources/nginx/nginx.conf
+++ b/install/resources/nginx/nginx.conf
@@ -150,15 +150,14 @@ http {
     #防火墙配置
     access_by_lua 'symodules.waf.checkWaf()';
 
-    #定义一个limit_req_zone用来存储session
+    #只能定义在http作用域
     #名为allips,以$binary_remote_addr为key,10M内存大小,限制平均每秒的请求为20个
-    #1M能存储16000个状态,rete的值必须为整数
+    #1M能存储16000个状态,rate的值必须为整数
     #如果限制两秒钟一个请求,可以设置成30r/m
     limit_req_zone $binary_remote_addr zone=allips:10m rate=20r/s;
 
-    #limit_zone只能定义在http作用域,limit_conn可以定义在http server location作用域
+    #只能定义在http作用域
     #定义一个名为one,以$binary_remote_addr为key,10M内存大小的limit_zone来存储session
-    #nginx 1.1.8以后用limit_conn_zone替换了limit_zone且只能放在http作用域
     limit_conn_zone one $binary_remote_addr 10m;
 
     #geo指令定义了一个白名单$limited变量,默认值为1,如果客户端ip在上面的范围内,$limited的值为0
@@ -293,7 +292,7 @@ http {
         rewrite ^/Index/WxOpen/handleAuthorizerNotify/([0-9a-zA-Z]+)$ /Index/WxOpen/handleAuthorizerNotify?appid=$1 permanent;
 
         location / {
-            #brust-漏桶数
+            #burst-漏桶数
             #  如果第1,2,3,4秒请求为19个,第5秒的请求为25个是被允许的
             #  如果你第1秒就25个请求,第2秒超过20的请求返回503错误
             #nodelay
@@ -301,7 +300,7 @@ http {
             #  设置:25个请求将在第1秒执行
             limit_req zone=allips burst=5 nodelay;
 
-            #连接数限制
+            #连接数限制,可定义在http server location作用域
             limit_conn one 20;
             #带宽限制,对单个连接限数,如果一个ip两个连接,就是500x2k
             limit_rate 500k;
