--- a/sy_user/conf/application.ini
+++ b/sy_user/conf/application.ini
@@ -1,6 +1,6 @@
 [common]
 application.directory=APP_PATH"/application"
-application.modules="Index"
+application.modules="Index,V1"
 application.library=APP_PATH"/Libs"
 ;是否自动捕获异常 0:否,异常会作为参数传递给ErrorController的errorAction 1:是,异常不作为参数传递,必须在ErrorController的errorAction方法内通过this->getRequest()->getException()来获取
 application.dispatcher.catchException=0
