fixed error for kafka consumer msg multi times

--- a/yaconf/kafka.ini
+++ b/yaconf/kafka.ini
@@ -1,9 +1,9 @@
-[producer]
-request.required.acks=1
-request.timeout.ms=3000
-[consumer]
-enable.auto.commit=1
-auto.offset.reset="smallest"
-[deva01producer : producer]
-[deva01consumer : consumer]
-metadata.broker.list="web1.xxx.com:9092,web2.xxx.com:9092,web3.xxx.com:9092"
+[base]
+common.metadata.broker.list="web1.xxx.com:9092,web2.xxx.com:9092,web3.xxx.com:9092"
+common.offset.expire=259200
+common.message.handle.max=2000
+producer.request.required.acks=1
+producer.request.timeout.ms=3000
+consumer.auto.offset.reset="earliest"
+consumer.offset.store.sync.interval.ms=0
+[deva01 : base]
