update yaf ini config

--- a/install/resources/php7/php-cli.ini
+++ b/install/resources/php7/php-cli.ini
@@ -1949,8 +1949,8 @@ opcache.file_cache="/tmp/swoolyaf"
 extension=imagick.so
 [yaf]
 extension=yaf.so
-yaf.use_namespace = on
-yaf.use_spl_autoload = off
+yaf.use_namespace = 1
+yaf.use_spl_autoload = 1
 yaf.environ=dev
 ;类名路径部分小写开关,默认为0,1:路径全小写 0:不处理
 yaf.lowcase_path=0
