--- a/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
+++ b/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
@@ -160,8 +160,8 @@ opcache.file_cache="/tmp/swoolyaf"
 extension=imagick.so
 [yaf]
 extension=yaf.so
-yaf.use_namespace = on
-yaf.use_spl_autoload = off
+yaf.use_namespace = 1
+yaf.use_spl_autoload = 1
 yaf.environ=dev
 yaf.lowcase_path=0
 [yaconf]
