add validator for digit lower and digit power;install version update to 3.0

--- a/install/configs/swooleyaf/php7/php-cli.ini
+++ b/install/configs/swooleyaf/php7/php-cli.ini
@@ -153,7 +153,7 @@ opcache.max_accelerated_files=10000
 opcache.validate_timestamps=0
 opcache.revalidate_freq=0
 opcache.fast_shutdown=1
-opcache.file_cache="/tmp/swoolyaf"
+opcache.file_cache="/tmp/swooleyaf"
 [curl]
 [openssl]
 [imagick]
