--- a/install/resources/php7/php-cli.ini
+++ b/install/resources/php7/php-cli.ini
@@ -1896,7 +1896,7 @@ opcache.fast_shutdown=1
 ; It should improve performance when SHM memory is full, at server restart or
 ; SHM reset. The default "" disables file based caching.
 ; 为了方便清理缓存,统一配置到/tmp目录下
-opcache.file_cache="/tmp/swoolyaf"
+opcache.file_cache="/tmp/swooleyaf"
 
 ; Enables or disables opcode caching in shared memory.
 ;opcache.file_cache_only=0
