--- a/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
+++ b/install/configs/swooleyaf/php7/php-fpm-fcgi.ini
@@ -153,7 +153,7 @@ opcache.max_accelerated_files=10000
 opcache.validate_timestamps=0
 opcache.revalidate_freq=0
 opcache.fast_shutdown=1
-opcache.file_cache="/tmp/swoolyaf"
+opcache.file_cache="/tmp/swooleyaf"
 [curl]
 [openssl]
 [imagick]
