--- a/yaconf/kafka.ini
+++ b/yaconf/kafka.ini
@@ -6,4 +6,5 @@ producer.request.required.acks=1
 producer.request.timeout.ms=3000
 consumer.auto.offset.reset="earliest"
 consumer.offset.store.sync.interval.ms=0
+consumer.fetch.wait.max.ms=2000
 [deva01 : base]
