update nginx install configs

--- a/install/configs/swooleyaf/nginx/demoapi.conf
+++ b/install/configs/swooleyaf/nginx/demoapi.conf
@@ -1,14 +1,15 @@
-limit_req_zone $binary_remote_addr zone=allips:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=ipa01:10m rate=10r/s;
+proxy_cache_path /home/configs/nginx/cache/a01 levels=1:2 use_temp_path=off keys_zone=ngcachea01:16m inactive=1d max_size=64m;
 geo $limited {
     default 1;
     127.0.0.1/32 0;
 }
-map $limited $allips {
+map $limited $ipa01 {
     1 $binary_remote_addr;
     0 "";
 }
-upstream http_a01api {
-    zone http_a01api 64k;
+upstream http_apia01 {
+    zone http_apia01 64k;
     least_conn;
     server 10.81.125.222:7100 weight=1 max_fails=3 fail_timeout=30;
     keepalive 500;
@@ -16,10 +17,16 @@ upstream http_a01api {
     check_http_send "HEAD /healthcheck HTTP/1.0\r\n\r\n";
     check_http_expect_alive http_2xx http_3xx;
 }
+upstream http_staticapia01 {
+    zone http_staticapia01 64k;
+    least_conn;
+    server 10.81.125.222:9690 weight=1 max_fails=3 fail_timeout=30;
+    keepalive 500;
+}
 server {
     listen 80;
     server_name api.xxx.cn;
-    root /home/jw;
+    root /home/phpspace/swooleyaf;
     index index.php index.html;
     access_log /home/logs/nginx/xxxcn_api.access.log main;
 
@@ -30,8 +37,8 @@ server {
 
     add_header Cache-Control 'no-store';
     location / {
-        limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://http_a01api;
+        limit_req zone=ipa01 burst=2 nodelay;
+        proxy_pass http://http_apia01;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
@@ -49,12 +56,41 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         add_header Via "nginx";
     }
+    location ~ /purge(/.*) {
+        allow all;
+        proxy_cache_purge ngcachea01 $host$1;
+    }
     location ~ .*\.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
-        root /home/jw/phpspace/swooleyaf/static;
-        expires 10m;
-        add_header Cache-Control public;
-        add_header Pragma public;
-        add_header Vary Accept-Encoding;
+        proxy_pass http://http_staticapia01;
+        proxy_redirect off;
+        proxy_ignore_client_abort on;
+        proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+        proxy_http_version 1.1;
+        proxy_connect_timeout 10;
+        proxy_read_timeout 30;
+        proxy_send_timeout 20;
+        proxy_buffers 4 64k;
+        proxy_buffer_size 4k;
+        proxy_busy_buffers_size 128k;
+        proxy_temp_file_write_size 128k;
+        proxy_max_temp_file_size 16m;
+        proxy_set_header Host $host;
+        proxy_set_header Connection "";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-Port $remote_port;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_cache ngcachea01;
+        proxy_cache_key $host$uri;
+        proxy_cache_valid 200 304 302 15m;
+        proxy_cache_valid any 5m;
+        proxy_cache_revalidate on;
+        proxy_cache_min_uses 1;
+        proxy_cache_lock on;
+        proxy_cache_lock_timeout 3s;
+        proxy_cache_bypass $http_pragma;
+        add_header X-Cache $upstream_cache_status;
+        add_header Via "nginx";
     }
     location ~ /\.ht {
         deny all;
@@ -63,7 +99,7 @@ server {
 server {
     listen 443 ssl http2;
     server_name api.xxx.cn;
-    root /home/jw;
+    root /home/phpspace/swooleyaf;
     index index.php index.html;
     access_log /home/logs/nginx/xxxcn_apihttps.access.log ssl;
 
@@ -85,8 +121,8 @@ server {
     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
 
     location / {
-        limit_req zone=allips burst=2 nodelay;
-        proxy_pass http://http_a01api;
+        limit_req zone=ipa01 burst=2 nodelay;
+        proxy_pass http://http_apia01;
         proxy_redirect off;
         proxy_ignore_client_abort on;
         proxy_http_version 1.1;
@@ -104,12 +140,41 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         add_header Via "nginx";
     }
+    location ~ /purge(/.*) {
+        allow all;
+        proxy_cache_purge ngcachea01 $host$1;
+    }
     location ~ .*\.(html|htm|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
-        root /home/jw/phpspace/swooleyaf/static;
-        expires 10m;
-        add_header Cache-Control public;
-        add_header Pragma public;
-        add_header Vary Accept-Encoding;
+        proxy_pass http://http_staticapia01;
+        proxy_redirect off;
+        proxy_ignore_client_abort on;
+        proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+        proxy_http_version 1.1;
+        proxy_connect_timeout 10;
+        proxy_read_timeout 30;
+        proxy_send_timeout 20;
+        proxy_buffers 4 64k;
+        proxy_buffer_size 4k;
+        proxy_busy_buffers_size 128k;
+        proxy_temp_file_write_size 128k;
+        proxy_max_temp_file_size 16m;
+        proxy_set_header Host $host;
+        proxy_set_header Connection "";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-Port $remote_port;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_cache ngcachea01;
+        proxy_cache_key $host$uri;
+        proxy_cache_valid 200 304 302 15m;
+        proxy_cache_valid any 5m;
+        proxy_cache_revalidate on;
+        proxy_cache_min_uses 1;
+        proxy_cache_lock on;
+        proxy_cache_lock_timeout 3s;
+        proxy_cache_bypass $http_pragma;
+        add_header X-Cache $upstream_cache_status;
+        add_header Via "nginx";
     }
     location ~ /\.ht {
         deny all;
