update cookie domain

--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -12,7 +12,7 @@ bcmath.scale=3
 [devz01 : base]
 dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
-domain.cookie[]=".xxx.cn"
+domain.cookie.base=".xxx.cn"
 wx.url.auth.default="http://www.baidu.com"
 wx.url.notify.default="http://www.baidu.com"
 ;服务模块
