--- a/yaconf/messagequeue.ini
+++ b/yaconf/messagequeue.ini
@@ -14,3 +14,4 @@ rabbit.conn.port=5672
 rabbit.conn.vhost="1111"
 rabbit.conn.login="1111"
 rabbit.conn.password="1111"
+rabbit.consumer.msg.handle.max=1000
