--- a/yaconf/messagequeue.ini
+++ b/yaconf/messagequeue.ini
@@ -9,3 +9,9 @@ kafka.producer.request.timeout.ms=3000
 kafka.consumer.auto.offset.reset="earliest"
 kafka.consumer.offset.store.sync.interval.ms=0
 kafka.consumer.fetch.wait.max.ms=2000
+rabbit.conn.host="127.0.0.1"
+rabbit.conn.port=5672
+rabbit.conn.vhost="1111"
+rabbit.conn.login="1111"
+rabbit.conn.password="1111"
+rabbit.consumer.msg.handle.max=1000
