--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -34,6 +34,11 @@ server.request.maxnum.handling=3000
 server.cachenum.users=128
 ;服务同时处理的最大请求数量
 server.request.maxnum.handling=1000
+[deva01content : base]
+;用户信息缓存数量,必须是2的指数倍
+server.cachenum.users=128
+;服务同时处理的最大请求数量
+server.request.maxnum.handling=1000
 [deva01user : base]
 ;用户信息缓存数量,必须是2的指数倍
 server.cachenum.users=128
