add message push

--- a/yaconf/messagepush.ini
+++ b/yaconf/messagepush.ini
@@ -5,7 +5,7 @@ ali.region.id="cn-hangzhou"
 ali.proxy.status=0
 ali.proxy.ip="127.0.0.1"
 ali.proxy.port=8888
-tencent.android.app.id="1111"
-tencent.android.app.secret="1111"
-tencent.ios.app.id="1111"
-tencent.ios.app.secret="1111"
+xinge.android.app.id="1111"
+xinge.android.app.secret="1111"
+xinge.ios.app.id="1111"
+xinge.ios.app.secret="1111"
