--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -9,6 +9,10 @@ dir.store.resources="/home/systore/resources"
 dir.store.cache="/tmp/sycache"
 ;bc数学函数小数点保留位数
 bcmath.scale=3
+;阿里开放接口核心库常量
+aliopen.proxy.status=0
+aliopen.proxy.ip="127.0.0.1"
+aliopen.proxy.port=8888
 [deva01 : base]
 dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
