--- a/yaconf/project.ini
+++ b/yaconf/project.ini
@@ -13,7 +13,7 @@ bcmath.scale=3
 aliopen.proxy.status=0
 aliopen.proxy.ip="127.0.0.1"
 aliopen.proxy.port=8888
-[deva01 : base]
+[devz01 : base]
 dir.libs.frame="/home/jw/phpspace/swooleyaf/libs_frame/"
 ;cookie域名
 domain.cookie.base=".xxx.cn"
