delete wxopen authorizer jsticket

--- a/yaconf/syserver.ini
+++ b/yaconf/syserver.ini
@@ -16,7 +16,7 @@ server.auth="6YjbN15oLmPKleN5"
 server.cachenum.hc=1024
 ;服务模块缓存数量,必须是2的指数倍,每一个模块就需要缓存一份数据
 server.cachenum.modules=16
-;项目本地缓存数量,必须是2的指数倍,目前只有微信用到,一个微信公众号需要两个缓存分别存access_token和js_ticket
+;项目本地缓存数量,必须是2的指数倍
 server.cachenum.local=64
 ;项目本地微信缓存数量,必须是2的指数倍,存access_token和js_ticket
 server.cachenum.wx=64
